GNOME Bugzilla – Bug 702034
color_value_parse() memory leak
Last modified: 2013-09-17 03:32:34 UTC
==18892== 294,080 (42,080 direct, 252,000 indirect) bytes in 2,630 blocks are definitely lost in loss record 44,416 of 44,487 ==18892== at 0x4A06409: malloc (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so) ==18892== by 0x376804D93E: g_malloc (gmem.c:159) ==18892== by 0x37680634ED: g_slice_alloc (gslice.c:1003) ==18892== by 0x3768063A2D: g_slice_alloc0 (gslice.c:1029) ==18892== by 0x3D0248A727: _gtk_css_symbolic_value_new (gtksymboliccolor.c:68) ==18892== by 0x3D0251502D: color_value_parse (gtkcssstylefuncs.c:264) ==18892== by 0x3D02509E2C: gtk_css_provider_get_style_property (gtkcssprovider.c:1530) ==18892== by 0x3D026098A3: gtk_style_cascade_get_style_property (gtkstylecascade.c:109) ==18892== by 0x3D0260D38A: _gtk_style_context_peek_style_property (gtkstylecontext.c:2294) ==18892== by 0x3D026B942D: gtk_widget_style_get_valist (gtkwidget.c:11830) ==18892== by 0x3D026B9706: gtk_widget_style_get (gtkwidget.c:11868) ==18892== by 0x3D0704A3E1: get_prop_color (htmlcolorset.c:168)
Created attachment 251237 [details] leak.c I cannot reproduce the leak with my simplified version of the related code, valgrind reports only possibly lost memory, which seem to me more to a Gtk's CSS related, than to GtkHTML. I also see reports around gtk_css_symbolic_value_new() inside gtk_init(), rather than elsewhere.