gtk/gtkcssstylefuncs.c
@@ -256,7 +256,7 @@ rgba_value_compute (GtkStyleProviderPrivate *provider,
   G_GNUC_END_IGNORE_DEPRECATIONS;
 }
 
-static gboolean 
+static gboolean
 color_value_parse (GtkCssParser *parser,
                    GValue       *value)
 {
@@ -278,6 +278,7 @@ color_value_parse (GtkCssParser *parser,
       color.blue = rgba.blue * 65535. + 0.5;
 
       g_value_set_boxed (value, &color);
+      gtk_symbolic_color_unref (symbolic);
     }
   else
     {
